--- a/index.html
+++ b/index.html
@@ -2,29 +2,119 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+  <meta name="description" content="Ejemplo HTML5"/>
+  <meta name="keywords" content="HTML5, CSS3, javascript"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
 	<title>Document</title>
+
+	<link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Amaranth|Arsenal" rel="stylesheet">
+
 	<script src="page.js"></script>
+
 </head>
 <body>
+<!--NAV-->
+  <header>
+    <section>
+      <div class="container" id="container1">
+        <div class="row">
+          <div class="col-sm-5 col-md-5">
+            <div class="input-group mb-3">
+              <input type="text" class="form-control" placeholder="Search" aria-label="Recipient's username" aria-describedby="basic-addon2" id="search">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" id="btn">Button</button>
+            </div>
+            </div>
+          </div>
 
-	<header>
-		<nav>
-			<ul>
-				<li><a href="/#">Home</a></li>
-				<li><a href="/phones">Phones</a></li>
-				<li><a href="/camera">Camera</a></li>
-				<li><a href="/headphones">HeadPhones</a></li>
-				<li><a href="/computers">Computers</a></li>
-			</ul>
-		</nav>
-	</header>
+          <div class="col-sm-3 col-md-3">
+            <img src="assets/img/market1.PNG" alt="" id="logo">
+          </div>
 
+          <div class="col-sm-4 col-md-4">
+            <button class="btn btn-outline-secondary" type="button" id="btn1">Entra</button>
+            <i class="fas fa-cart-arrow-down" id="shopping"></i>
+          </div>
+        </div>
+      </div>
+    </section>
 
+<!--LISTA DE OPCIONES-->
+    <nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <ul id="listNav">
+							<li><a href="/#">Home</a></li>
+							<li><a href="/phones">Phones</a></li>
+							<li><a href="/camera">Camera</a></li>
+							<li><a href="/headphones">HeadPhones</a></li>
+							<li><a href="/computers">Computers</a></li>
+              <hr>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+<!--FIN NAV-->
 
+<!--PRIMERA SECCION INICIO-->
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="assets/img/carousel1.PNG" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="assets/img/carousel2.PNG" alt="Second slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2" id="img2">
+          <img src="assets/img/inicio1.PNG" alt="">
+        </div>
+
+        <div class="col-sm-3 col-md-3 col-lg-3 col-xl-3" id="text">
+          <h2>Compra tus artículos favoritos      ></h2>
+        </div>
+      </div>
+    </div>
+  </section>
+<!--FIN DE PRIMERA SECCION INICIO-->
+
+<!--SEGUNDA SECCION INICIO-->
+  <section>
+    <div class="container">
+      
+    </div>
+  </section>
+<!--FIN DE SEGUNDA SECCION INICIO-->
+
+<!--DIV CONTENEDOR DINAMICO-->
 	<div id="fromPage">
 	<p></p>
 	</div>
 
-<script type="text/javascript" src="assets/js/app.js"></script>
+	<script type="text/javascript" src="assets/js/app.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>-->
 </body>
 </html>
