modificando index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Amaranth|Arsenal" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amaranth|Arsenal|Parisienne" rel="stylesheet">
 
 	<script src="page.js"></script>
 
@@ -48,6 +48,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
             <ul id="listNav">
+            	<hr>
 							<li><a href="/#">Home</a></li>
 							<li><a href="/phones">Phones</a></li>
 							<li><a href="/camera">Camera</a></li>
@@ -102,10 +103,97 @@
 <!--SEGUNDA SECCION INICIO-->
   <section>
     <div class="container">
-      
+      <div class="row">
+      	<div class="col-sm-6 col-md-6 col-xl-6 col-lg-6" id="paragraph">
+      		<h2><i class="fas fa-check" id="check"></i>Artículos únicos</h2>
+      		<p>Tenemos millones de artículos totalmente únicos. Solo tienes que encontrar lo que sea que busques (o ese producto que tanto te ha enamorado).</p>
+      	</div>
+
+      	<div class="col-sm-6 col-md-6 col-xl-6 col-lg-6" id="paragraph">
+      		<h2><i class="fas fa-check" id="check"></i>Compras seguras</h2>
+      		<p>Usamos la mejor tecnología de su clase para proteger tus transacciones.</p>
+      	</div>
+      </div>
     </div>
   </section>
 <!--FIN DE SEGUNDA SECCION INICIO-->
+
+<!--TERCERA SECCION INICIO-->
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-3 col-md-12 col-lg-12 col-xl-12" id="title">
+					<h1>Lo más popular</h1>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-12 col-md-12 col-lg-12 col-xl-12" id="images">
+					<img src="assets/img/notebook.png" alt="">
+					<img src="assets/img/camara.png" alt="">
+					<img src="assets/img/celular.png" alt="">
+					<img src="assets/img/headphones.png" alt="">
+					<img src="assets/img/camara1.png" alt="">
+					<img src="assets/img/celular1.png" alt="">
+				</div>
+			</div>
+		</div>
+		
+	</section>
+<!--FIN DE TERCERA SECCION INICIO-->
+
+<!--CUARTA SECCION INICIO-->
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-12 col-lg-12 col-xl-12" id="title">
+					<h1>Búsquedad por categoría</h1>
+				</div>
+			</div>
+
+			<div class="row" id="cards">
+				<div class="col-sm-3 col-md-3 col-lg-3 col-xl-3">
+					<div class="card" id="cards1" style="width: 10rem;">
+	  				<img class="card-img-top" src="assets/img/celular1.png" alt="Card image cap">
+	  			<div class="card-body">
+	    			<p class="card-text"><a href="/phones">Phones</a></p>
+	  			</div>
+					</div>
+				</div>
+
+				<div class="col-sm-3 col-md-3 col-lg-3 col-xl-3">
+					<div class="card" id="cards1" style="width: 10rem;">
+	  				<img class="card-img-top" src="assets/img/camara.png" alt="Card image cap">
+	  			<div class="card-body">
+	    			<p class="card-text"><a href="camera">Cameras</a></p>
+	  			</div>
+					</div>
+				</div>
+
+				<div class="col-sm-3 col-md-3 col-lg-3 col-xl-3">
+					<div class="card" id="cards1" style="width: 10rem;">
+	  				<img class="card-img-top" src="assets/img/headphones.png" alt="Card image cap">
+	  			<div class="card-body">
+	    			<p class="card-text"><a href="/headphones">Headphones</a></p>
+	  			</div>
+					</div>
+				</div>
+
+				<div class="col-sm-3 col-md-3 col-lg-3 col-xl-3">
+					<div class="card" id="cards1" style="width: 10rem;">
+	  				<img class="card-img-top" src="assets/img/notebook.png" alt="Card image cap">
+	  			<div class="card-body">
+	    			<p class="card-text"><a href="/computers">Computers</a></p>
+	  			</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+<!--FIN DE CUARTA SECCION INICIO-->
+
+<!--QUINTA SECCION INICIO-->
+
 
 <!--DIV CONTENEDOR DINAMICO-->
 	<div id="fromPage">
