modificando index.html

--- a/index.html
+++ b/index.html
@@ -193,6 +193,72 @@
 <!--FIN DE CUARTA SECCION INICIO-->
 
 <!--QUINTA SECCION INICIO-->
+	<section id="fiveSection">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-3 col-md-3 col-lg-3 col-xl-3">
+					<img src="assets/img/caja-fuerte.png" alt="" id="box">
+				</div>
+
+				<div class="col-sm-8 col-md-8 col-lg-8 col-xl-8" id="title2">
+					<h1>MarkeTech te mantiene seguro</h1>
+				</div>
+			</div>
+
+				<div class="row">
+					<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4" id="title3">
+						<h3>Confianza</h3>
+						<p>Puedes leer sus reseñas y políticas, y ponerte en contacto con nosotros si tienes alguna pregunta</p>
+					</div>
+
+					<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4" id="title3">
+						<h3>Seguridad a nivel mundial</h3>
+						<p>La protección de tu información es la principal prioridad de nuestros expertos en seguridad</p>
+					</div>
+
+					<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4" id="title3">
+						<h3>Compra de protección</h3>
+						<p>Si surge algún problema, nuestro equipo de asistencia global estará a tu servicio</p>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-sm-2">
+						<img src="assets/img/llave.png" alt="" id="key">
+					</div>
+				</div>
+		</div>
+	</section>
+<!--FIN DE QUINTA SECCION INICIO-->
+
+<!--SEXTA SECCION INICIO-->
+	<section id="sixSection">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-3 col-md-3 col-lg-3 col-xl-3">
+					<img src="assets/img/local.png" alt="" id="local">
+				</div>
+
+				<div class="col-sm-6 col-md-6 col-lg-6 col-xl-6" id="text3">
+					<h1>¿Qué es MarkeTech?</h1>
+					<p>Somos más que un mercado</p>
+					<p>Lee todo sobre nosotros    ></p>
+					</div>
+
+				<div class="col-sm-3 col-md-3 col-lg-3 col-xl-3">
+					<img src="assets/img/local.png" alt="" id="local">
+				</div>
+			</div>
+		</div>
+	</section>
+<!--FIN DE SEXTA SECCION INICIO-->
+
+<!--SEPTIMA SECCION INICIO (FOOTER)-->
+	<section>
+		
+	</section>
+<!--FIN DE SEPTIMA SECCION INICIO (FOOTER)-->
+
 
 
 <!--DIV CONTENEDOR DINAMICO-->
