--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 <!--FIN NAV-->
 
 <!--DIV CONTENEDOR DINAMICO-->
-	<div id="fromPage">
-		<!--PRIMERA SECCION INICIO-->
+	<div class="container" >
+		<div class="row" id="fromPage" >
+			<!--PRIMERA SECCION INICIO-->
   <section>
     <div class="container">
       <div class="row">
@@ -260,7 +261,10 @@
 		
 	</section>
 <!--FIN DE SEPTIMA SECCION INICIO (FOOTER)-->
+		</div>
 	</div>
+
+
 
 
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
