vistas productos con descripcion en todo, agregando precio a data

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="input-group mb-3">
               <input type="text" class="form-control" placeholder="Search" aria-label="Recipient's username" aria-describedby="basic-addon2" id="search">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="btn">Button</button>
+              <button class="btn btn-outline-secondary" type="button" id="btn">Search</button>
             </div>
             </div>
           </div>
@@ -35,8 +35,8 @@
           </div>
 
           <div class="col-sm-4 col-md-4">
-            <button class="btn btn-outline-secondary" type="button" id="btn1">Entra</button>
-            <i class="fas fa-cart-arrow-down" id="shopping"></i>
+            <button class="btn btn-outline-secondary" type="button" id="btn1">Log In</button>
+            <button type="button" class = "mybtnCart"><i class="fas fa-cart-arrow-down"></i></button>
           </div>
         </div>
       </div>
@@ -62,6 +62,8 @@
     </nav>
   </header>
 <!--FIN NAV-->
+
+
 
 <!--DIV CONTENEDOR DINAMICO-->
 	<div class="container" >
@@ -269,10 +271,11 @@
 
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
   <script type="text/javascript" src="assets/js/data_base.js"></script>
+  <script type="text/javascript" src="assets/js/events.js"></script>
 
-  <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>-->
-</body>
+ 
 </html>
